name:           GpxTool
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Koehler

executable GpxTool
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   system-filepath >=0.4 && <0.5,
                   xml-conduit >=1.2.0 && <1.3,
                   text >=0.11.3 && <0.12,
                   containers >=0.5.0 && <0.6,
                   xml-hamlet >=0.4.0 && <0.5,
                   bytestring >=0.10.0 && <0.11,
                   filepath >=1.3.0 && <1.4
  ghc-options:     -Wall -rtsopts -O2
  other-modules:   
                   Gpx,
                   XmlParser,
                   XmlGen,
                   Options

test-suite Test
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HTF > 0.9
  hs-source-dirs:  src
  other-modules:   Gpx

